--- a/src/app/collections/containers/collection-list/collection-list.component.html
+++ b/src/app/collections/containers/collection-list/collection-list.component.html
@@ -1,3 +1,17 @@
-<p>
-  collection-list works!
-</p>
+<section class="container content" >        
+  <div class="row">
+    <div *ngFor="let bookshelf of bookShelvesList" class="col-12 col-sm-12 col-md-6 col-lg-3">
+      <div class="card">
+          <div class="card-header">
+              {{bookshelf.title}}
+          </div>
+          <div class="card-body">
+              <p class="card-text">
+                  {{bookshelf.description}}
+              </p>
+              <a class="col-12 col-md-auto col-lg-auto btn btn-primary" [routerLink]="['../detail/', bookshelf.id]">Entrar</a>
+          </div>
+      </div>                        
+  </div>
+  </div>
+</section>
